2015-10-14  rob.spoor  <bbbm@icemanx.nl>

	Refactored the options to support a dynamic number of commands
	Added higher minimum versions for gtk+-2.0 and glib-2.0

2015-10-04  rob.spoor  <bbbm@icemanx.nl>

	Rebuilt the build process to use autoconf, automake, etc
	Rewrote most of the code to support new features and build process
	Added tools/migrate.py to convert existing configuration files

2015-08-23  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.7.3

2007-05-12  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.7.2

2007-03-05  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.7.1

2007-03-04  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.7

2005-03-23  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.6.2

2004-07-03  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.6.1

2004-06-29  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.6

2004-06-24  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.5

2004-06-22  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.4.2

2004-06-21  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.4.1

2004-06-03  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.4

2004-05-31  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.3.1

2004-05-30  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.3
	Discontinued bbbm1

2004-03-31  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.2

2004-03-27  rob.spoor  <bbbm@icemanx.nl>

	Released version 0.1